fixed login z-index

--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000000000000;
   }
 
   #modal-background {
@@ -23,4 +24,3 @@
     position: absolute;
     background-color:white;
   }
-  
